--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2490,6 +2490,18 @@
   timestamp = {2019.01.19},
 }
 
+@InCollection{Baker1996,
+  author    = {Baker, M.},
+  title     = {Corpus-Based Translation Studies: The challenges that lie ahead},
+  booktitle = {Terminology, {LSP} and Translation},
+  publisher = {John Benjamins Publishing Company},
+  year      = {1996},
+  pages     = {175},
+  doi       = {10.1075/btl.18.17bak},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+}
+
 @InProceedings{Baker1998,
   author    = {Baker, C. F. and Fillmore, C. J. and Lowe, J. B.},
   title     = {The Berkeley {FrameNet} Project},
@@ -4908,6 +4920,18 @@
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {http://www.dialog-21.ru/digests/dialog2014/materials/pdf/BodrovaAABocharovVV.pdf},
+}
+
+@MastersThesis{Bogucki2022,
+  author      = {Bogucki, W.},
+  title       = {Analysis of graphs of the interactions between the characters in movies and TV series},
+  year        = {2022},
+  type        = {MSc Thesis},
+  abstract    = {This Master’s thesis aim is to present a process of creating networks of interactions between characters of films and serials based on transcriptions and analysis of such networks. The paper presents a comparison of community detection methods as well as the use of these methods in plot analysis. A comparative analysis of the interaction network from episodes of four popular series - The Office (American version), Seinfeld, The Big Bang Theory and Friends is also presented. Character networks are compared both in terms of distributions of their metrics and node centrality measures. Moreover, the author considers the hypothesis whether the viewers’ ratings of the series are related to the structure of the character networks of their episodes. Finally, the differences and similarities between the interaction networks in selected movies and series are analyzed, as well as the potential reasons for their occurrence. The author’s contribution includes gathering and discussing currently available data sources containing transcriptions of movies and series and additional information on viewer ratings and viewership. It also includes describing the process of creating a character network from HTML sources. Moreover, it contains extending existing comparisons of community detection methods in character networks and analysis of the relationship between viewer ratings of episodes and the structure of their character networks through the correlation of ratings and networks measures and feature importance in the random forest model. The author also contributes to the character network analysis by presenting a comparison of the network of films and series episodes using the Principal component analysis (PCA).},
+  institution = {Warsaw University of Technology},
+  owner       = {Vincent},
+  timestamp   = {2022.10.15},
+  url         = {https://repo.pw.edu.pl/info/master/WUT842bdb73d578411fa1c8f01c1eee421e/},
 }
 
 @Article{Boguna2004,
@@ -11901,6 +11925,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Doenicke2022,
+  author        = {Dönicke, T. and Barth, F. and Varachkina, H. and Sporleder, C.},
+  title         = {{MONAPipe}: Modes of Narration and Attribution Pipeline for German Computational Literary Studies and Language Analysis in {spaCy}},
+  booktitle     = {18th Conference on Natural Language Processing},
+  year          = {2022},
+  pages         = {8-15},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2022.09.13},
+  url           = {https://aclanthology.org/2022.konvens-1.2/},
+}
+
 @InCollection{Does2017,
   author    = {de Does, J. and Depuydt, K. and van Dalen-Oskam, K. and Marx, M.},
   title     = {Namescape: Named entity recognition from a literary perspective},
@@ -16140,6 +16176,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.07.08},
 }
 
+@Article{Galeno2022,
+  author    = {Galeno, Alex and Castro , Gustavo},
+  title     = {Balzac and the Literature of Complexity},
+  journal   = {Global Journal of Human-Social Science A},
+  year      = {2022},
+  volume    = {22},
+  number    = {6},
+  pages     = {1-12},
+  owner     = {Vincent},
+  timestamp = {2022.09.20},
+  url       = {https://repositorio.unb.br/handle/10482/44836},
+}
+
 @Book{Gallafent2014,
   title     = {QuentinTarantino},
   publisher = {Routledge},
@@ -18797,6 +18846,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1037/0033-295x.108.4.814},
   owner     = {Vincent},
   timestamp = {2021.12.15},
+}
+
+@MastersThesis{Hainsworth2022,
+  author      = {Hainsworth, B.},
+  title       = {Analysing the Textual Variance in Terry Pratchett's The Carpet People},
+  year        = {2022},
+  type        = {MPhil},
+  institution = {Trinity College},
+  owner       = {Vincent},
+  timestamp   = {2022.09.20},
+  url         = {http://www.tara.tcd.ie/handle/2262/101163},
 }
 
 @Article{Hakimi1992,
@@ -22251,6 +22311,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp     = {2022.08.06},
 }
 
+@InCollection{Jannidis2013,
+  author    = {Jannidis, F.},
+  title     = {Character},
+  booktitle = {The Living Handbook of Narratology},
+  publisher = {Hamburg University},
+  year      = {2013},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+  url       = {https://www-archiv.fdm.uni-hamburg.de/lhn/node/41.html},
+}
+
 @InProceedings{Jannidis2016,
   author    = {Jannidis, F. and Reger, I. and Krug, M. and Weimer, L. and Macharowsky, L. and Puppe, F.},
   title     = {Comparison of Methods for the Identification of Main Characters in German Novels},
@@ -24946,6 +25017,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15427951.2012.625260},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@InProceedings{Konovalova2022,
+  author    = {Konovalova, A. and Toral, A.},
+  title     = {Man vs. Machine: Extracting Character Networks from Human and Machine Translations},
+  booktitle = {6th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2022},
+  pages     = {75-82},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+  url       = {https://aclanthology.org/2022.latechclfl-1.10/},
+}
+
+@InProceedings{Konovalova2022a,
+  author    = {Konovalova, Aleksandra and Toral, Antonio and Taivalkoski-Shilov, Kristiina},
+  title     = {Dr. Livingstone, I presume? Polishing of foreign character identification in literary texts},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2022},
+  pages     = {123-128},
+  doi       = {10.18653/v1/2022.naacl-srw.16},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
 }
 
 @Article{Kontoleon2013,
@@ -29360,7 +29453,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Lv2016,
   author    = {Lv, J. and Wu, B. and Yang, S. and Jia, B. and Qiu, P.},
-  title     = {Efficient large scale near-duplicate video detection base on spark},
+  title     = {Efficient large scale near-duplicate video detection base on {Spark}},
   booktitle = {IEEE International Conference on Big Data},
   year      = {2016},
   pages     = {957-962},
@@ -29405,6 +29498,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1587/transinf.2019edp7104},
   owner     = {Vincent},
   timestamp = {2019.12.06},
+}
+
+@Article{Lv2022b,
+  author    = {Lv, J. and Shen, Q. and Lv, M. and and Shi, L.},
+  title     = {Relation Extraction from Videos Based on {IoT} Intelligent Collaboration Framework},
+  journal   = {Mathematics},
+  year      = {2022},
+  volume    = {10},
+  number    = {18},
+  pages     = {3308},
+  doi       = {10.3390/math10183308},
+  owner     = {Vincent},
+  timestamp = {2022.09.14},
 }
 
 @Book{Lyle2012,
@@ -30281,6 +30387,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.jstor.org/stable/26396002},
+}
+
+@Article{Margolin1990,
+  author    = {Margolin, U.},
+  title     = {The What, the When, and the How of Being a Character in Literary Narrative},
+  journal   = {Style},
+  year      = {1990},
+  volume    = {24},
+  number    = {3},
+  pages     = {453-468},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+  url       = {https://www.jstor.org/stable/42945873},
 }
 
 @InCollection{Margolin2007,
@@ -32489,6 +32608,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://www.cambridge.org/fr/academic/subjects/computer-science/algorithmics-complexity-computer-algebra-and-computational-g/probability-and-computing-randomization-and-probabilistic-techniques-algorithms-and-data-analysis-2nd-edition},
+}
+
+@Electronic{Miz2018,
+  author       = {Miz, V.},
+  month        = {09},
+  year         = {2018},
+  title        = {Movie genres classification using character interaction networks},
+  howpublished = {\url{https://blog.miz.space/research/2018/07/09/moviegalaxies-data-analysis-genre-classification-using-social-network-topologies-of-movies/}},
+  organization = {Volodymyr Miz' Blog},
+  url          = {https://blog.miz.space/research/2018/07/09/moviegalaxies-data-analysis-genre-classification-using-social-network-topologies-of-movies/},
+  owner        = {Vincent},
+  timestamp    = {2022.10.15},
 }
 
 @Book{Mizruchi1982,
@@ -38330,6 +38461,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.09},
   url       = {https://books.google.fr/books?id=7S4PCgAAQBAJ},
+}
+
+@Article{Ranade2022,
+  author    = {Ranade, P. and Dey, S. and Joshi, A. and Finin, T.},
+  title     = {Computational Understanding of Narratives: A Survey},
+  journal   = {IEEE Access},
+  year      = {2022},
+  volume    = {10},
+  pages     = {101575-101594},
+  doi       = {10.1109/ACCESS.2022.3205314},
+  owner     = {Vincent},
+  timestamp = {2022.09.13},
 }
 
 @Book{Ranciere2014,
@@ -48004,6 +48147,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.clausewitz.com/readings/OnWar1873/TOC.htm#a},
 }
 
+@InProceedings{Vondricka2014,
+  author    = {Vondřička, P.},
+  title     = {Aligning parallel texts with InterText},
+  booktitle = {9th International Conference on Language Resources and Evaluation},
+  year      = {2014},
+  pages     = {1875-1879},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+  url       = {https://aclanthology.org/L14-1258/},
+}
+
 @Article{vonFerber2012,
   author    = {von Ferber, C. and Berche, B. and Holovatch, T. and Holovatch, Y.},
   title     = {A tale of two cities: Vulnerabilities of the London and Paris transit networks},
@@ -50241,6 +50395,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2017.330},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@InProceedings{Xu2021,
+  author    = {Xu, M. and Li, L. and Wong, D. F. and Liu, Q. and Chao, L. S.},
+  title     = {Document Graph for Neural Machine Translation},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2021},
+  pages     = {8435-8448},
+  doi       = {10.18653/v1/2021.emnlp-main.663},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
 }
 
 @Article{Xuan2014,
