--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2111,6 +2111,19 @@
   url       = {https://www.jstor.org/stable/j.ctt3fgz26},
 }
 
+@Article{Auger2008,
+  author    = {Auger, E. E.},
+  title     = {The lord of the rings' interlace: Tolkien's narrative and Lee's illustrations},
+  journal   = {Journal of the Fantastic in the Arts},
+  year      = {2008},
+  volume    = {19},
+  number    = {1},
+  pages     = {70-93},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://www.proquest.com/openview/44fefa243604398a2796613c9a67dc14/1?pq-origsite=gscholar&cbl=45928},
+}
+
 @InProceedings{Augereau2017,
   author    = {Augereau, O. and Iwata, M. and Kise, K.},
   title     = {An overview of comics research in computer science},
@@ -3729,6 +3742,18 @@
   owner     = {Vincent},
   timestamp = {2022.07.07},
   url       = {https://www.jstor.org/stable/44578133},
+}
+
+@InProceedings{Belkin2001,
+  author        = {Belkin, M. and Niyogi, P.},
+  title         = {Laplacian eigenmaps and spectral techniques for embedding and clustering},
+  booktitle     = {14th International Conference on Neural Information Processing Systems},
+  year          = {2001},
+  pages         = {585-591},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2017.07.23},
+  url           = {http://dl.acm.org/citation.cfm?id=2980539.2980616},
 }
 
 @InCollection{Belle1982,
@@ -6373,6 +6398,19 @@
   timestamp = {2019.03.29},
 }
 
+@Article{Bronstein2017,
+  author    = {Bronstein, M. M. and Bruna, J. and LeCun, Y. and Szlam, A. and Vandergheynst, P.},
+  title     = {Geometric Deep Learning: Going beyond Euclidean data},
+  journal   = {IEEE Signal Processing Magazine},
+  year      = {2017},
+  volume    = {34},
+  number    = {4},
+  pages     = {18-42},
+  doi       = {10.1109/msp.2017.2693418},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @Article{BronwenThomas2011,
   author    = {Thomas, B.},
   title     = {What Is Fanfiction and Why Are People Saying Such Nice Things about It??},
@@ -6498,6 +6536,17 @@
   doi       = {10.1093/imamat/6.1.76},
   owner     = {Vincent},
   timestamp = {2020.12.18},
+}
+
+@InProceedings{Bruna2017,
+  author        = {Bruna, J. and Li, X.},
+  title         = {Supervised Community Detection with Line Graph Neural Networks},
+  booktitle     = {International Conference on Learning Representations},
+  year          = {2019},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent },
+  timestamp     = {2017.05.27},
+  url           = {https://arxiv.org/abs/1705.08415},
 }
 
 @Article{Bruner1991,
@@ -14622,6 +14671,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://pdfs.semanticscholar.org/4e5a/1ed4a89434346eec51a0e8154c7cbeb74c49.pdf},
 }
 
+@Article{Feldman2013,
+  author    = {Feldman, R.},
+  title     = {Techniques and applications for sentiment analysis},
+  journal   = {Communications of the ACM},
+  year      = {2013},
+  volume    = {56},
+  number    = {4},
+  pages     = {82-89},
+  doi       = {10.1145/2436256.2436274},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @Book{Fellbaum1998,
   title     = {WordNet: An Electronic Lexical Database},
   publisher = {MIT Press},
@@ -14824,6 +14886,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1017/s1351324904003523},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Fey2019,
+  author    = {Fey, M. and Lenssen, J. E.},
+  title     = {Fast Graph Representation Learning with PyTorch Geometric},
+  booktitle = {Representation Learning on Graphs and Manifolds},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://arxiv.org/abs/1903.02428},
 }
 
 @Book{Feynman1963,
@@ -16248,6 +16320,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.08},
 }
 
+@InProceedings{Gallicchio2010,
+  author    = {Gallicchio, C. and Micheli, A.},
+  title     = {Graph Echo State Networks},
+  booktitle = {International Joint Conference on Neural Networks},
+  year      = {2010},
+  doi       = {10.1109/ijcnn.2010.5596796},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @Book{Galloway2007,
   title     = {The Exploit: A Theory of Networks},
   publisher = {University of Minnesota Press},
@@ -17632,6 +17714,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.25},
 }
 
+@InProceedings{Gori2005,
+  author    = {Gori, M. and Monfardini, G. and Scarselli, F.},
+  title     = {A new model for learning in graph domains},
+  booktitle = {IEEE International Joint Conference on Neural Networks},
+  year      = {2005},
+  pages     = {729–734},
+  doi       = {10.1109/ijcnn.2005.1555942},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @InProceedings{Gorinski2015,
   author    = {Gorinski, P. J. and Lapata , M.},
   title     = {Movie Script Summarization as Graph-based Scene Extraction},
@@ -18790,6 +18883,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://benhachey.info/pubs/hachey-phd-thesis.pdf},
 }
 
+@InProceedings{Hackl2021,
+  author    = {Hackl, J. and Scholtes, I. and Petrović, L. V. and Perri, V. and Verginer, L. and Gote, C.},
+  title     = {Analysis and Visualisation of Time Series Data on Networks with Pathpy},
+  booktitle = {Web Conference},
+  year      = {2021},
+  pages     = {530-532},
+  doi       = {10.1145/3442442.3452052},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @InProceedings{Hagberg2008,
   author    = {Hagberg, A. and Schult, D. and Swart, P.},
   title     = {Exploring network structure, dynamics, and function using NetworkX},
@@ -19024,6 +19128,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1098/rspb.2007.0564},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Book{Hamilton2020,
+  title         = {Graph Representation Learning},
+  publisher     = {Morgan \& Claypool},
+  year          = {2020},
+  author        = {Hamilton, W. L.},
+  volume        = {46},
+  series        = {Synthesis Lectures on Artificial Intelligence and Machine Learning},
+  __markedentry = {[Vincent:]},
+  doi           = {10.2200/s01045ed1v01y202009aim046},
+  owner         = {Vincent},
+  timestamp     = {2020.09.25},
 }
 
 @Article{Hammond1992,
@@ -24445,6 +24562,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://global.oup.com/academic/product/the-tin-9780192803733},
 }
 
+@InProceedings{Kipf2017,
+  author    = {Kipf, T. N. and Welling, M.},
+  title     = {Semi-Supervised Classification with Graph Convolutional Networks},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2020.01.21},
+  url       = {https://openreview.net/forum?id=SJU4ayYgl},
+}
+
 @InCollection{Kipnis2002,
   author    = {Kipnis, A.},
   title     = {Practices of Guanxi Production and Practices of Ganqing Avoidance},
@@ -27722,6 +27849,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2011.06.20},
 }
 
+@Article{Leyerle1967,
+  author    = {Leyerle, J.},
+  title     = {The interlace structure of Beowulf},
+  journal   = {University of Toronto Quarterly},
+  year      = {1967},
+  volume    = {37},
+  pages     = {1-17},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://muse.jhu.edu/article/571732/pdf},
+}
+
 @Article{Li1992,
   author    = {Li, W.},
   title     = {Random texts exhibit Zipf's-law-like word frequency distribution},
@@ -28232,6 +28371,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-58555-6_2},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Li2022a,
+  author    = {Li, J. and Sun, A. and Han, J. and Li, C.},
+  title     = {A Survey on Deep Learning for Named Entity Recognition},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2022},
+  volume    = {34},
+  pages     = {50-70},
+  doi       = {10.1109/tkde.2020.2981314},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
 }
 
 @InProceedings{Liang2009a,
@@ -36847,6 +36998,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.25},
 }
 
+@Article{Perri2022,
+  author    = {Perri, V. and Qarkaxhija, L. and Zehe, A. and Hotho, A. and Scholtes, I.},
+  title     = {One Graph to Rule them All: Using NLP and Graph Neural Networks to analyse Tolkien's Legendarium},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.CL},
+  pages     = {2210.07871},
+  owner     = {Vincent},
+  timestamp = {2022.10.20},
+  url       = {https://arxiv.org/abs/2210.07871},
+}
+
 @Article{Perry1979,
   author    = {Perry, M.},
   title     = {Literary Dynamics: How the Order of a Text Creates Its Meanings [With an Analysis of Faulkner's ``A Rose for Emily'']},
@@ -38100,6 +38263,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3159652.3159706},
   owner     = {Vincent},
   timestamp = {2020.01.21},
+}
+
+@InProceedings{Qiu2019,
+  author    = {Qiu, J. and Dong, Y. and Ma, H. and Li, J. and Wang, C. and Wang, K. and Tang, J.},
+  title     = {{NetSMF}: Large-Scale Network Embedding as Sparse Matrix Factorization},
+  booktitle = {World Wide Web Conference},
+  year      = {2019},
+  pages     = {1509-1520},
+  doi       = {10.1145/3308558.3313446},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
 }
 
 @Article{Qu2015,
@@ -41482,6 +41656,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Scarselli2009,
+  author    = {Scarselli, F. and Gori, M. and Tsoi, Ah Chung and Hagenbuchner, M. and Monfardini, G.},
+  title     = {The Graph Neural Network Model},
+  journal   = {IEEE Transactions on Neural Networks},
+  year      = {2009},
+  volume    = {20},
+  number    = {1},
+  pages     = {61-80},
+  doi       = {10.1109/tnn.2008.2005605},
+  owner     = {Vincent},
+  timestamp = {2020.12.07},
+}
+
 @Article{Scarsoglio2016,
   author    = {Scarsoglio, S. and Iacobello, G. and Ridolfi, L.},
   title     = {Complex Networks Unveiling Spatial Patterns in Turbulence},
@@ -42126,6 +42313,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {http://www.digitalhumanities.org/companionDLS/},
+}
+
+@InProceedings{Schroeder2021,
+  author    = {Schröder, F. and Hatzel, H. O. and Biemann, C.},
+  title     = {Neural End-to-end Coreference Resolution for German in Different Domains},
+  booktitle = {17th Conference on Natural Language Processing},
+  year      = {2021},
+  pages     = {170-181},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://aclanthology.org/2021.konvens-1.15/},
 }
 
 @InProceedings{Schroff2015,
@@ -42981,6 +43179,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.emnlp-main.346},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@Book{Shippey2014,
+  title     = {The road to Middle-earth: how JRR Tolkien created a new mythology},
+  publisher = {HarperCollins},
+  year      = {2014},
+  author    = {Shippey, T.},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://www.harpercollins.com/products/the-road-to-middle-earth-how-j-r-r-tolkien-created-a-new-mythology-tom-shippey?variant=32244720042018},
 }
 
 @InProceedings{Shirai2016,
@@ -44126,6 +44334,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.18},
 }
 
+@Article{Sperduti1997,
+  author    = {Sperduti, A. and Starita, A.},
+  title     = {Supervised neural networks for the classification of structures},
+  journal   = {IEEE Transactions on Neural Networks},
+  year      = {1997},
+  volume    = {8},
+  number    = {3},
+  pages     = {714-735},
+  doi       = {10.1109/72.572108},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @InProceedings{Speriosu2010,
   author    = {Speriosu, M. and Brown, T. and Moon, T. and Baldridge, J. and Erk, K.},
   title     = {Connecting Language and Geography with Region-Topic Models .},
@@ -45009,13 +45230,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Sukthanker2018,
   author    = {Sukthanker, R. and Poria, S. and Cambria, E. and Thirunavukarasu, R.},
   title     = {Anaphora and Coreference Resolution: A Review},
-  journal   = {arXiv},
-  year      = {2018},
-  volume    = {cs.CL},
-  pages     = {1805.11824},
+  journal   = {Information Fusion},
+  year      = {2020},
+  volume    = {59},
+  pages     = {139-162},
+  doi       = {10.1016/j.inffus.2020.01.010},
   owner     = {Vincent},
   timestamp = {2019.04.18},
-  url       = {https://arxiv.org/abs/1805.11824},
 }
 
 @InProceedings{Sun2008,
@@ -47716,6 +47937,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2022.06.06},
 }
 
+@InProceedings{Velickovic2018,
+  author    = {Veličković, P. and Cucurull, G. and Casanova, A. and Romero, A. and Liò, P. and Bengio, Y.},
+  title     = {Graph Attention Networks},
+  booktitle = {6th International Conference on Learning Representations},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2020.01.27},
+  url       = {https://openreview.net/forum?id=rJXMpikCZ&noteId=rJXMpikCZ},
+}
+
 @Article{Vendrig2002,
   author    = {Vendrig, J. and Worring, M.},
   title     = {Systematic evaluation of logical story unit segmentation},
@@ -49270,6 +49501,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://mitpress.mit.edu/books/numbered-lives},
+}
+
+@Article{West1975,
+  author    = {West, R. C.},
+  title     = {The interlace structure of the lord of the rings},
+  journal   = {A Tolkien Compass},
+  year      = {1975},
+  volume    = {2},
+  pages     = {75-91},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://isfdb.org/cgi-bin/title.cgi?904440},
 }
 
 @Book{West2001,
@@ -51477,6 +51720,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {http://ceur-ws.org/Vol-2624/paper12.pdf},
 }
 
+@InProceedings{Zehe2021,
+  author    = {Zehe, A. and Konle, L. and Dümpelmann, L. K. and Gius, E. and Hotho, A. and Jannidis, F. and Kaufmann, L. and Krug, M. and Puppe, F. and Reiter, N. and Schreiber, A. and Wiedmer, N.},
+  title     = {Detecting Scenes in Fiction: A new Segmentation Task},
+  booktitle = {16th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2021},
+  pages     = {3167-3177},
+  doi       = {10.18653/v1/2021.eacl-main.276},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+}
+
 @Article{Zelenko2003,
   author    = {Zelenko, D. and Aone, C. and Richardella, A.},
   title     = {Kernel methods for relation extraction},
@@ -51801,6 +52055,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icis.2018.8466543},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@InProceedings{Zhang2018ai,
+  author    = {Zhang, M. and Chen, Y.},
+  title     = {Link Prediction Based on Graph Neural Networks},
+  booktitle = {Conference on Neural Information Processing Systems},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
+  url       = {https://proceedings.neurips.cc/paper/2018/hash/53f0d7c537d99b3824f0f99d62ea2428-Abstract.html},
+}
+
+@Article{Zhang2018aj,
+  author    = {Zhang, M. and Cui, Z. and Neumann, M. and Chen, Y.},
+  title     = {An End-to-End Deep Learning Architecture for Graph Classification},
+  journal   = {AAAI Conference on Artificial Intelligence},
+  year      = {2018},
+  volume    = {32},
+  number    = {1},
+  doi       = {10.1609/aaai.v32i1.11782},
+  owner     = {Vincent},
+  timestamp = {2022.11.08},
 }
 
 @Article{Zhang2019,
@@ -52251,6 +52527,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tkde.2017.2784430},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Zhou2018i,
+  author    = {Zhou, J. and Cui, G. and Zhang, Z. and Yang, C. and Liu, Z. and Wang, L. and Li, C. and Sun, M.},
+  title     = {Graph Neural Networks: A Review of Methods and Applications},
+  journal   = {AI Open},
+  year      = {2020},
+  volume    = {1},
+  pages     = {57-81},
+  doi       = {10.1016/j.aiopen.2021.01.001},
+  owner     = {Vincent},
+  review    = {arXiv: https://arxiv.org/abs/1812.08434},
+  timestamp = {2020.12.01},
 }
 
 @InProceedings{Zhou2019,
