--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2209,6 +2209,16 @@
   timestamp = {2020.11.30},
 }
 
+@InProceedings{Avgerinos2016,
+  author    = {Avgerinos, C. and Nikolaidis, N. and Mygdalis, V. and Pitas, I.},
+  title     = {Feature extraction and statistical analysis of videos for cinemetric applications},
+  booktitle = {Digital Media Industry {\&}amp$\mathsemicolon$ Academic Forum},
+  year      = {2016},
+  doi       = {10.1109/dmiaf.2016.7574926},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
+}
+
 @Article{Aviezer2008,
   author    = {Aviezer, H. and Hassin, R. R. and Ryan, J. and Grady, C. and Susskind, J. and Anderson, A. and Moscovitch, M. and Bentin, S.},
   title     = {Angry, Disgusted, or Afraid?},
@@ -3064,6 +3074,19 @@
   owner     = {Vincent},
   timestamp = {2022.06.21},
   url       = {https://books.google.fr/books?id=VKZWAAAAYAAJ},
+}
+
+@Article{Barros2019,
+  author    = {Barros, C. and Lloret, E. and Saquete, E. and Navarro-Colorado, B.},
+  title     = {{NATSUM}: Narrative abstractive summarization through cross-document timeline generation},
+  journal   = {Information Processing \& Management},
+  year      = {2019},
+  volume    = {56},
+  number    = {5},
+  pages     = {1775-1793},
+  doi       = {10.1016/j.ipm.2019.02.010},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @Article{Barroso2014,
@@ -8890,6 +8913,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.physa.2007.04.035},
   owner     = {Vincent},
   timestamp = {2017.04.27},
+}
+
+@Article{Choi2012,
+  author    = {Choi, S.-M. and Ko, S.-K. and Han, Y.-S.},
+  title     = {A movie recommendation algorithm based on genre correlations},
+  journal   = {Expert Systems with Applications},
+  year      = {2012},
+  volume    = {39},
+  number    = {9},
+  pages     = {8079-8085},
+  doi       = {10.1016/j.eswa.2012.01.132},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @Book{Chomsky1975,
@@ -14954,6 +14990,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780198121800.001.0001/acprof-9780198121800},
 }
 
+@Book{Figgis2017,
+  title     = {The Thirty-Six Dramatic Situations},
+  publisher = {Faber \& Faber},
+  year      = {2017},
+  author    = {Figgis, M.},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
+  url       = {https://www.forgottenbooks.com/en/download/TheThirtySixDramaticSituations_10254814.pdf},
+}
+
 @Article{Figueroa-Caballero2019,
   author    = {Figueroa-Caballero, A. and Mastro, D. and Stamps, D.},
   title     = {An Examination of the Effects of Mediated Intragroup and Intergroup Interactions among Latino/a Characters},
@@ -15813,6 +15859,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2022.06.19},
   url       = {https://aclanthology.org/W09-2421/},
+}
+
+@Article{Fremal2017,
+  author    = {Frémal, S. and Lecron, F.},
+  title     = {Weighting strategies for a recommender system using item clustering based on genres},
+  journal   = {Expert Systems with Applications},
+  year      = {2017},
+  volume    = {77},
+  pages     = {105-113},
+  doi       = {10.1016/j.eswa.2017.01.031},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @InProceedings{Frens2018,
@@ -22703,6 +22761,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@InProceedings{Ji2020,
+  author    = {Ji, J. and Krishna, R. and Li, F.-F. and Niebles, J. C.},
+  title     = {Action Genome: Actions As Compositions of Spatio-Temporal Scene Graphs},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  doi       = {10.1109/cvpr42600.2020.01025},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
+}
+
 @Article{Jia2016,
   author    = {Jia, S. and Lansdall-Welfare, T. and Sudhahar, S. and Carter, C. and Cristianini, N.},
   title     = {Women Are Seen More than Heard in Online Newspapers},
@@ -23101,6 +23169,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner         = {Vincent},
   timestamp     = {2020.11.22},
   url           = {https://www.research.manchester.ac.uk/portal/files/162575015/ethesis_with_cover_page_FINAL_PJ.pdf},
+}
+
+@Article{Jorge2019,
+  author    = {Jorge, A. M. and Campos, R. and Jatowt, A. and Nunes, S.},
+  title     = {Preface to the Information Processing \& Management Journal Special Issue on Narrative Extraction from Texts (Text2Story)},
+  journal   = {Information Processing \& Management},
+  year      = {2019},
+  volume    = {56},
+  number    = {5},
+  pages     = {1771-1774},
+  doi       = {10.1016/j.ipm.2019.05.004},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @InProceedings{Joseph2017,
@@ -29019,6 +29100,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@Article{Liu2020a,
+  author    = {Liu, C. and Shmilovici, A. and Last, M.},
+  title     = {Towards story-based classification of movie scenes},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {2},
+  pages     = {e0228579},
+  doi       = {10.1371/journal.pone.0228579},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
+}
+
 @Article{Liu2021,
   author    = {Liu, N. and Xu, Z. and Zeng, X.-J. and Ren, P.},
   title     = {An agglomerative hierarchical clustering algorithm for linear ordinal rankings},
@@ -29029,6 +29123,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.ins.2020.12.056},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@InProceedings{Liu2022aa,
+  author    = {Liu, C. and Shmilovici, A. and Last, M.},
+  title     = {The Same Thing – Only Different: Classification of Movies by their Story Types},
+  booktitle = {Creative Video Editing and Understanding Workshop},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.10.22},
+  url       = {https://cveu.github.io/2022/papers/0016.pdf},
 }
 
 @Article{LoBue2015,
@@ -31161,6 +31265,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://pdfs.semanticscholar.org/a5d2/af2a518e2c74761bdc3d976657ac48c9d2f8.pdf},
+}
+
+@InProceedings{Materzynska2020,
+  author    = {Materzynska, J. and Xiao, T. and Herzig, R. and Xu, H. and Wang, X. and Darrell, T.},
+  title     = {Something-Else: Compositional Action Recognition With Spatial-Temporal Interaction Networks},
+  booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year      = {2020},
+  doi       = {10.1109/cvpr42600.2020.00113},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @Article{Mathiesen2012,
@@ -36290,6 +36404,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10618-011-0224-z},
   owner     = {Vincent},
   timestamp = {2011.06.18},
+}
+
+@InProceedings{Papalampidi2019,
+  author    = {Papalampidi, P. and Keller, F. and Lapata, M.},
+  title     = {Movie Plot Analysis via Turning Point Identification},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  doi       = {10.18653/v1/d19-1180},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @InProceedings{Papalampidi2020,
@@ -47865,6 +47989,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.routledge.com/Hollywood-Economics-How-Extreme-Uncertainty-Shapes-the-Film-Industry/Vany/p/book/9780415312615},
 }
 
+@PhdThesis{Vargas2017,
+  author    = {Vargas, J. V.},
+  title     = {Narrative information extraction with non-linear natural language processing pipelines},
+  school    = {Drexel University},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
+  url       = {https://core.ac.uk/download/pdf/190321996.pdf},
+}
+
 @InProceedings{Vaswani2017,
   author    = {Vaswani, A. and Shazeer, N. and Parmar, N. and Uszkoreit, J. and Jones, L. and Gomez, A. N. and Kaiser, Ł. and Polosukhin, I.},
   title     = {Attention is All you Need},
@@ -52089,6 +52223,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1609/aaai.v33i01.33017476},
   owner     = {Vincent},
   timestamp = {2022.07.02},
+}
+
+@Article{Zhang2019a,
+  author    = {Zhang, H. and Boons, F. and Batista-Navarro, R.},
+  title     = {Whose story is it anyway? Automatic extraction of accounts from news articles},
+  journal   = {Information Processing \& Management},
+  year      = {2019},
+  volume    = {56},
+  number    = {5},
+  pages     = {1837-1848},
+  doi       = {10.1016/j.ipm.2019.02.012},
+  owner     = {Vincent},
+  timestamp = {2022.11.09},
 }
 
 @InProceedings{Zhang2019aa,
